# converter

./: Cargo.toml
crates/: Cargo.toml
crates/askama_resolver/: Cargo.toml
crates/askama_resolver/src/: lib.rs
crates/website/: Cargo.toml
crates/website/src/: favicon_route.rs  main.rs  main_router.rs  static_route.rs
crates/website/static/: style.css
crates/website/templates/: index.html
src/: controller.rs
static/: index.html
