[package]
name = "text-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
deadpool = "0.12.1"
tokio = { version = "1.41.0", features = ["full"] }
mini-redis = "0.4"
actix-web = "4"
openssl = { version = "0.10" }
serde = { version = "1.0.214", features = ["derive"] }  # Enable the derive feature
derive_more = "0.99.17"
env_logger = "0.8"
log = "0.4"
simplelog = "0.12.2"
clap = { version = "4.5.20", features = ["derive"] }
watchexec = "5.0.0"
files = "2.2.3"
actix-files = "0.6.6"